--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: blue;
+  background-color: grey;
   color: white;
   text-align: center;
 }
